--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -26,7 +26,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "primeicons": "^1.0.0-beta.10",
-    "primeng": "^6.1.3",
+    "primeng": "^6.1.4",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
     "zone.js": "~0.8.26"
